# libbtrace

./: .ci.yml  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile.am  README.adoc  README.md  configure.ac  custom_build.py  init.py.patch  pyproject.toml
.github/workflows/: libbtrace.yml
.reuse/: dep5
doc/api/libbabeltrace2/: Makefile.am
doc/api/libbabeltrace2/dox/: guides.dox
doc/bindings/python/ext/: bt2sphinxurl.py
doc/bindings/python/source/: installation.rst
doc/man/: Makefile.am
src/: Makefile.am
src/bindings/python/bt2/: Makefile.am  setup.py.in
src/bindings/python/bt2/bt2/: __init__.py  clock_class.py  clock_snapshot.py  component.py  component_descriptor.py  connection.py  error.py  event.py  event_class.py  field.py  field_class.py  field_location.py  field_path.py  graph.py  integer_range_set.py  interrupter.py  logging.py  message.py  message_iterator.py  mip.py  object.py  packet.py  plugin.py  port.py  py_plugin.py  query_executor.py  stream.py  stream_class.py  trace.py  trace_class.py  trace_collection_message_iterator.py  typing_mod.py  utils.py  value.py
src/common/: list.h  version.h
src/common/zephyr/: dlist.h  util.h
src/compat/: socket.hpp
src/lib/graph/: iterator.c
src/lib/graph/message/: packet.c
src/plugins/ctf/: plugin.cpp
src/plugins/ctf/common/src/: msg-iter.cpp  msg-iter.hpp
src/plugins/ctf/common/src/item-seq/: item-seq-iter.cpp  item-seq-iter.hpp
src/plugins/ctf/common/src/metadata/tsdl/: metadata-stream-decoder.cpp
src/plugins/ctf/fs-src/: fs.cpp
src/plugins/ctf/live-src/: live-src.cpp  live-src.hpp  socket.cpp  socket.hpp
src/plugins/utils/muxer/: comp.cpp  comp.hpp  msg-iter.cpp  msg-iter.hpp  upstream-msg-iter.cpp
test/: test_import.py
