# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	include \
	src \
	doc

dist_doc_DATA = \
	LICENSE \
	README.adoc

EXTRA_DIST = \
	.reuse/dep5 \
	LICENSES/Autoconf-exception-2.0.txt \
	LICENSES/BSD-4-Clause.txt \
	LICENSES/BSL-1.0.txt \
	LICENSES/CC0-1.0.txt \
	LICENSES/CC-BY-SA-4.0.txt \
	LICENSES/FSFAP.txt \
	LICENSES/FSFULLR.txt \
	LICENSES/LGPL-2.1-only.txt \
	LICENSES/LicenseRef-Autoconf-exception-macro.txt \
	LICENSES/MIT.txt \
	LICENSES/PSF-2.0.txt
