# Copyright (c) 2025-2026 Analog Devices, Inc.
# Copyright (c) 2025-2026 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["setuptools>=76.0.0"]

[project]
name = "bt2"
version = "0.0.1"
description = "libbtrace - Parser for CTF traces based on parts of Babeltrace 2"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = [
  "LICENSES/*.txt",
  "LICENSE",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Logging",
]

[project.optional-dependencies]
dev = [
  "ruff~=0.12.10",
  "isort~=5.13",
]

[tool.setuptools]
packages = ["bt2"]
package-data.bt2 = ["*.so", "*.so.0", "*.dylib", "*.dll", "*.pyd"]
ext-modules = [{ name = "__bt2_dummy_ext.so", sources = ["bt2/dummy_ext.c"] }]

[tool.setuptools.cmdclass]
build = "custom_build.build"
build_ext = "custom_build.build_ext"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/test"
skip = "*-musllinux*"

[tool.cibuildwheel.container-engine]
name = "docker"
disable-host-mount = false

[tool.cibuildwheel.linux]

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = [
    "c:\\msys64\\msys2_shell.cmd -defterm -no-start -ucrt64 -where . -c 'pacman -S --needed --noconfirm mingw-w64-ucrt-x86_64-gcc mingw-w64-ucrt-x86_64-autotools mingw-w64-ucrt-x86_64-glib2 mingw-w64-ucrt-x86_64-swig mingw-w64-ucrt-x86_64-libtool mingw-w64-ucrt-x86_64-pkgconf mingw-w64-ucrt-x86_64-python-setuptools mingw-w64-ucrt-x86_64-glib2 make bison flex patch'",
    "pip install delvewheel",
]
environment = { PATH = "$PATH;C:\\msys64\\ucrt64\\bin;C:\\msys64\\bin", MSYSTEM = "UCRT64" }
repair-wheel-command = "delvewheel repair --add-path C:/msys64/ucrt64/bin --ignore-existing -w {dest_dir} {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
before-all = [
  "yum install elfutils-libelf-devel patchelf patch swig elfutils-libs flex -y",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
  "apk add elfutils libdw patchelf patch swig flex bison",
]

[tool.ruff]
preview = true
line-length = 100
select = [
  "I",      # enable isort
  "E",      # PEP8 errors
  "E261",   # At least two spaces before inline comment
  "E225",   # Missing whitespace around operator
  "F",      # PEP8 warnings
  "RUF100", # disallowed unnecessary noqa
]

ignore = [
  "E203",  # Whitespace before ':'
  "D105",  # Missing docstring in magic method
  "D204",  # 1 blank line required after class docstring
  "D205",  # 1 blank line required between summary line and description
  "D200",  # One-line docstring should fit on one line
  "D102",  # Missing docstring in public method
  "D401",  # First line of docstring should be in imperative mood
  "D407",  # Missing argument description in the docstring (handled by pydoclint)
]

extend-exclude = ["src/bindings/python/bt2/bt2/local_typing.py"]

[tool.ruff.isort]
extra-standard-library = ["pathlib"]

[tool.ruff.extend-per-file-ignores]
"src/bindings/python/bt2/bt2/__init__.py" = ["E402"]  # Module level import not at top of file
